--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
   <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | 3-column preview card component</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Kumbh+Sans:wght@100..900&family=Lexend+Deca:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Kumbh+Sans:wght@100..900&family=Lexend+Deca:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-    @media screen and (max-width: 375px) {
+    @media screen and (min-width: 375px) and (max-width: 700px) {
       .container {
-        width: auto;
-        height: auto;
-        margin-top: 10px;
+        width: 350px;
+        height: 1500px;
+        margin-top: 100px;
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
 
@@ -35,46 +35,50 @@
       }
     }
 
-    @media screen and (min-width: 376px) {
+    @media screen and (min-width: 701px) {
+      .container {
+        width: 900px;
+        height: 500px;
+        margin-top: 100px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+
+      }
 
       .sedans {
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
       }
 
-      .container {
-        width: 1000px;
-        margin-top: 200px;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-
-      }
-
       .luxury {
         border-top-right-radius: 10px;
         border-bottom-right-radius: 10px;
       }
-
-
     }
 
     * {
       margin: 0;
       padding: 0;
+    }
 
+    body {
+      background-color: hsl(0, 0%, 95%);
+      justify-items: center;
     }
 
     .container {
       font-family: "Lexend Deca", sans-serif;
       font-weight: 400;
-      color:  hsla(0, 0%, 100%, 0.75);
       font-size: 15px;
+      color: hsla(0, 0%, 100%, 0.75);
+      padding-left: 0;
+      padding-right: 0;
     }
 
-
     .car {
+      display: grid;
+      grid-row-gap: 10px;
       padding: 50px;
-      height: 400px;
     }
 
     .sedans {
@@ -97,10 +101,30 @@
     }
 
     .btn {
-      margin-top: 50px;
+      background-color: hsl(0, 0%, 95%);
+      margin-top: 20px;
       height: 50px;
       width: 150px;
       border-radius: 50px;
+      border: 0;
+    }
+
+    .btn1 {
+      color: hsl(31, 77%, 52%);
+    }
+
+    .btn2 {
+      color: hsl(184, 100%, 22%);
+    }
+
+    .btn3 {
+      color: hsl(179, 100%, 13%);
+    }
+
+    .btn:focus {
+      background-color: transparent;
+      color: hsl(0, 0%, 95%);
+      border: 2px solid hsl(0, 0%, 95%);
     }
 
     .attribution {
@@ -108,6 +132,7 @@
       font-size: 11px;
       text-align: center;
     }
+
     .attribution a {
       color: hsl(228, 45%, 44%);
     }
@@ -119,23 +144,23 @@
     <div class="sedans car">
       <img src="./images/icon-sedans.svg" alt="sedan-img">
       <div class="text">SEDANS</div>
-      <div>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
-        or on your next road trip.</div>
-      <button class="btn btn-light" style="color: hsl(31, 77%, 52%);">Learn More</button>
+      <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
+        or on your next road trip.</p>
+      <button class="btn btn1">Learn More</button>
     </div>
     <div class="suv car">
       <img src="./images/icon-suvs.svg" alt="sedan-img">
       <div class="text"> SUVS</div>
-      <div>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
-        and off-road adventures.</div>
-      <button class="btn btn-light" style="color: hsl(184, 100%, 22%);">Learn More</button>
+      <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
+        and off-road adventures.</p>
+      <button class="btn btn2">Learn More</button>
     </div>
     <div class="luxury car">
       <img src="./images/icon-luxury.svg" alt="sedan-img">
       <div class="text"> LUXURY</div>
-      <div>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
-        rental and arrive in style.</div>
-      <button class="btn btn-light" style="color: hsl(179, 100%, 13%);">Learn More</button>
+      <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
+        rental and arrive in style.</p>
+      <button class="btn btn3">Learn More</button>
     </div>
   </div>
 
