--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
   <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | 3-column preview card component</title>
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
-
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Kumbh+Sans:wght@100..900&family=Lexend+Deca:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
@@ -18,10 +15,9 @@
       .container {
         width: 350px;
         height: 1500px;
-        margin-top: 100px;
+        /* margin-top: 100px; */
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-
       }
 
       .sedans {
@@ -39,10 +35,9 @@
       .container {
         width: 900px;
         height: 500px;
-        margin-top: 100px;
+        /* margin: 190px; */
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-
       }
 
       .sedans {
@@ -63,14 +58,17 @@
 
     body {
       background-color: hsl(0, 0%, 95%);
-      justify-items: center;
+      display: flex;
+      height: 100vh;
+      justify-content: center;
+      align-items: center;
     }
 
     .container {
       font-family: "Lexend Deca", sans-serif;
-      font-weight: 400;
+      font-weight: 500;
       font-size: 15px;
-      color: hsla(0, 0%, 100%, 0.75);
+      color: #060505bf;
       padding-left: 0;
       padding-right: 0;
     }
@@ -82,26 +80,26 @@
     }
 
     .sedans {
-      background-color: hsl(31, 77%, 52%);
+      background-color: rgb(38, 227, 177);
     }
 
     .suv {
-      background-color: hsl(184, 100%, 22%);
+      background-color: hsl(73, 42%, 54%);
     }
 
     .luxury {
-      background-color: hsl(179, 100%, 13%);
+      background-color: hsl(91, 79%, 66%);
     }
 
     .text {
       font-family: "Big Shoulders Display", sans-serif;
       font-weight: 700;
       font-size: 40px;
-      color: hsl(0, 0%, 95%);
+      color: #080606;
     }
 
     .btn {
-      background-color: hsl(0, 0%, 95%);
+      background-color: rgb(26, 24, 26);
       margin-top: 20px;
       height: 50px;
       width: 150px;
@@ -110,15 +108,15 @@
     }
 
     .btn1 {
-      color: hsl(31, 77%, 52%);
+      color: hsl(31, 28%, 45%);
     }
 
     .btn2 {
-      color: hsl(184, 100%, 22%);
+      color: hsl(146, 89%, 45%);
     }
 
     .btn3 {
-      color: hsl(179, 100%, 13%);
+      color: #cf944c;
     }
 
     .btn:focus {
@@ -134,7 +132,7 @@
     }
 
     .attribution a {
-      color: hsl(228, 45%, 44%);
+      color: rgb(48, 77, 195);
     }
   </style>
 </head>
@@ -149,14 +147,14 @@
       <button class="btn btn1">Learn More</button>
     </div>
     <div class="suv car">
-      <img src="./images/icon-suvs.svg" alt="sedan-img">
+      <img src="./images/icon-suvs.svg" alt="suv-img">
       <div class="text"> SUVS</div>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
         and off-road adventures.</p>
       <button class="btn btn2">Learn More</button>
     </div>
     <div class="luxury car">
-      <img src="./images/icon-luxury.svg" alt="sedan-img">
+      <img src="./images/icon-luxury.svg" alt="luxury-img">
       <div class="text"> LUXURY</div>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
         rental and arrive in style.</p>
@@ -165,10 +163,10 @@
   </div>
 
 
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Jaya Vignesh A</a>.
-  </div>
+    Coded by <a href="#">Jaya Vignesh A</a>
+  </div> -->
 
 </body>
 
